fix: normalize enpoints and updated swagger
